--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -3,7 +3,7 @@ name: Run the Kemocade VRChat Group Maker Action
 on:
   # Runs every hour at XX:30 by default
   schedule:
-    - cron: '30 * * * *'
+    - cron: '*/30 * * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
